--- a/front/bower.json
+++ b/front/bower.json
@@ -9,6 +9,7 @@
     "angular-resource": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
     "angular-ui-router": "~0.2.15",
+    "angularjs-slider": "~1.0.0",
     "bootstrap": "~3.1.1",
     "es5-shim": "~3.0.1",
     "font-awesome": ">=4.1.0",
